14/07/2020
-   fixed department prestige

10/07/2020
-   more acceleration

09/07/2020
-   fixed ship priority
-   fixed number formatting
-   fixed nuke

08/07/2020
-   fixed mod page
-   fixed ship info on design page
-   fixed css, nuke specialist limit and Production Department bonus
-   fixed threat
-   buff save
-   some replacements to nuke, space stations, drones

07/07/2020
-   fixed/implemented nuke
-   new card: Peacefully Efficiency
-   space stations auto buyer
-   rebalanced nuke and components
-   added changelog