@@ -1,3 +1,7 @@
+18/07/2020
+-   new ship modules "Tractor Beam" and "Communications Jammer"
+-   fixed battle threat
+
 14/07/2020
 -   fixed department prestige
 
